# LazyOpenCode

./: AGENTS.md  README.md  opencode.json  pyproject.toml
src/lazyopencode/: __init__.py  app.py  bindings.py
src/lazyopencode/mixins/: help.py  navigation.py
src/lazyopencode/models/: __init__.py  customization.py
src/lazyopencode/services/: discovery.py  writer.py
src/lazyopencode/services/parsers/: __init__.py  agent.py  command.py  mcp.py  plugin.py  rules.py  skill.py
src/lazyopencode/styles/: app.tcss
src/lazyopencode/widgets/: __init__.py  app_footer.py  combined_panel.py  detail_pane.py  status_panel.py  type_panel.py
tests/: conftest.py  test_inline.py
tests/integration/discovery/: test_full_discovery.py  test_rules.py  test_skills.py
tests/integration/fixtures/mcp/: project-opencode.json
